Add *.pyc in .gitignore. Also update config.json

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "training_path": "C:/Users/ming_chien/Desktop/Git/MyFaceDetection/img/me",
-    "target_path": "123"
+    "training_path": "C:/Users/ming_chien/Desktop/Git/MyFaceDetection/img/training",
+    "target_path": "C:/Users/ming_chien/Desktop/Git/MyFaceDetection/img/target"
 }
